# market-feeling

./: .env  .gitignore  Dockerfile  HELP.md  README.md  config.toml  pyproject.toml  settings.gradle
.github/workflows/: post-commit-pipeline.yml  pull-request-pipeline.yml
data/: companies.csv  final_training_data.csv  historical_news.csv  historical_news_AAPL.csv  historical_news_GOOGL.csv  historical_news_MDB.csv  historical_news_merged.csv  news_stock_dataset.csv
models/: stock_model.joblib
scheduler/: Dockerfile  requirements.txt
src/main/java/io/autoinvestor/: MarketFeelingApplication.java
src/main/java/io/autoinvestor/market_feeling/: MarketFeelingApplication.java
src/main/resources/: application.properties
src/test/java/io/autoinvestor/: MarketFeelingApplicationTests.java
src/test/java/io/autoinvestor/market_feeling/: MarketFeelingApplicationTests.java
tests/: test_companies.py  test_news.py  test_predictions.py
